# gtk3py3

./: README.md
guitar-tuner/: .anjuta_sym_db.db  Makefile.am  README  configure.ac
guitar-tuner/.anjuta/session/: anjuta.session  dock-layout.xml
guitar-tuner/src/: Makefile.am  guitar_tuner.py  guitar_tuner.ui
guitar-tuner3/: Makefile.am  README  autogen.sh  configure.ac  gtune3  gtune3.desktop.in  gtune3.ui
hello-gi/: Makefile.am  README  configure.ac  helloWorldPython  helloWorldPython.desktop.in
image-viewer/: .anjuta_sym_db.db  AUTHORS  ChangeLog  ImageViewerDemo.desktop.in  Makefile.am  README  configure.ac
image-viewer/.anjuta/session/: anjuta.session  dock-layout.xml
image-viewer/src/: Makefile.am  image_viewer.py
