## Process this file with automake to produce Makefile.in
## Created by Anjuta



## The main script
bin_SCRIPTS = image_viewer.py

## Directory where .class files will be installed
# NOTE: not a library
#image_viewerdir = $(pythondir)/image_viewer

# image_viewer_PYTHON = image_viewer.py

DISTCLEANFILES = Makefile.in

# Remove ui directory on uninstall
uninstall-local:

	-rm -r $(pkgdatadir)
